# API-Quality-Agent

./: .env.example  .gitignore  AUTHORS.md  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
docs/: RELEASE_2.md
tests/: conftest.py  fake_newman.py  postman_test_server.py
tests/acceptance/: README.md  conftest.py  test_cli_exit_codes.py  test_contract_declared_schema.py  test_execution_and_reporting.py  test_generation_and_isolation.py  test_offline_mode.py  test_update_and_approval.py  test_workspace_and_collection_selection.py
tests/unit/: conftest.py  test_active_selection.py  test_agent_orchestrator.py  test_agent_orchestrator_schema_provider.py  test_api_analysis_engine.py  test_approval_policy.py  test_canonical_endpoint_normalizer.py  test_cli_architecture.py  test_cli_config_command.py  test_cli_doctor_command.py  test_cli_generate_command.py  test_cli_generate_contract_file.py  test_cli_generate_from_file.py  test_cli_generate_from_openapi_file.py  test_cli_list_command.py  test_cli_main.py  test_cli_report_command.py  test_cli_run_command.py  test_cli_security.py  test_cli_subprocess_smoke.py  test_cli_update_command.py  test_cli_version_command.py  test_cli_workspace_command.py  test_collection_ref.py  test_collection_selection_use_cases.py  test_configuration_provider.py  test_contract_comparison_engine.py  test_contract_endpoint_matcher.py  test_contract_match_report.py  test_declared_contract_models.py  test_diff_engine.py  test_domain_exceptions.py  test_excel_contract_parser.py  test_excel_contract_validator.py  test_excel_schema_provider.py  test_execution_context.py  test_exit_codes.py  (+43 more)
(+215 files in other folders)
