[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-quality-agent"
version = "0.1.0"
description = "Agente de automação de qualidade para APIs (CLI), idealizado, arquitetado e mantido por Crystiane Mello"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Crystiane Mello" }]
maintainers = [{ name = "Crystiane Mello" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/CrysMello"
LinkedIn = "https://www.linkedin.com/in/crystianemello/"

[project.scripts]
api-quality-agent = "api_quality_agent.cli.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
